--- a/my_portfolio/main_app/templates/home.html
+++ b/my_portfolio/main_app/templates/home.html
@@ -9,17 +9,17 @@
     <h1 class = "welcome">Glad you could make it!</h1> 
     <div class = "abtme">
        
-        <p>My name is James Fox, I am a Fullstack Software Engineer with a mindset geared towards functionality, presentability, and efficiency.
+        <p class = 'about'>My name is James Fox, I am a Fullstack Software Engineer with a mindset geared towards functionality, presentability, and efficiency.<br>
            I have experience creating and designing pages just like this one from front to backend.
-           A passion I've always tried to pursue is technology in whatever form that may come in. Making it a fufilling career is all the more rewarding.
-           As a Fullstack Engineer the final product is not always worth sprinting towards, especially without a plan or proper intent.
-           I've found that working meticulously, with a purpose, and with a solid foundation yields the greater return.
+           Technology and design in whatever form that may present itself has always been a passion of mine. To have the experience to make it a career is truly fufilling.<br><br>
+           As a Fullstack Engineer the final product is not always worth sprinting towards, without proper intent, direction, and organziation.
+           With that, I've found that working meticulously, with purpose, and with a solid foundation has become the best approach.
            The reward of seeing all the pieces come together and properly execute can be extremely rewarding. In nearly all cases it's worth the effort we put in from start to finish.
            With this being such a diverse field I find communication to be one of our best tools for bringing together a truly remarkable project.
            That being said I have a background that has required me to follow that truth and the technical skills have followed as a result.</p>
       
-        <p>Take a look around the site and tell me what you think!</p>
-        <p>And thank you for stopping by.</p>
+        <p class = 'about'>Take a look around the site and tell me what you think!</p>
+        <p class = 'about'>I look forward to hearing from you and thank you for stopping by.</p>
         
     </div>
 
