--- a/my_portfolio/main_app/templates/link_page/links.html
+++ b/my_portfolio/main_app/templates/link_page/links.html
@@ -14,13 +14,13 @@
     <li><a id = 'ca' href= "https://github.com/Y2Kuwu/Calculator" target="_blank" rel="noopener noreferrer"> Calculator</a><button id = "calc">?</button></li>
     <script type="text/javascript">
         document.getElementById("tt").onclick = function () {
-            alert('Project completed but.. Reworking code and visual design\n Please check link sonn for the completed project!')
+            alert('Project completed but.. Reworking code and visual design\n Please check link soon for the completed project!')
         };
         document.getElementById("ca").onclick = function () {
-            alert('Project completed but.. Reworking code and visual design\n Please check link sonn for the completed project!')
+            alert('Project completed but.. Reworking code and visual design\n Please check link soon for the completed project!')
         };
         document.getElementById("rl").onclick = function () {
-            alert('Project completed but.. Reworking code and visual design\n Please check link sonn for the completed project!')
+            alert('Project completed but.. Reworking code and visual design\n Please check link soon for the completed project!')
         };
     </script>
     <li><a id = 're' href= "https://flexboxcss-grid-lab.jamesfox12.repl.co/" target="_blank" rel="noopener noreferrer"> Willem Dafoe</a><button id = "will">?</button></li>
