--- a/my_portfolio/main_app/templates/link_page/links.html
+++ b/my_portfolio/main_app/templates/link_page/links.html
@@ -11,12 +11,9 @@
     <li><a id = 'rl' href= "https://github.com/Y2Kuwu" target="_blank" rel="noopener noreferrer"> RadLibs</a></li>
     <li><a id = 'pm' href= "https://perfectmatchskills.herokuapp.com/" target="_blank" rel="noopener noreferrer"> Perfect.match()</a></li>
     <li><a id = 'fb' href= "https://project-004.herokuapp.com/" target="_blank" rel="noopener noreferrer"> FateBook</a></li>
-    <li><a id = 'ca' href= "https://github.com/Y2Kuwu/Calculator" target="_blank" rel="noopener noreferrer"> Calculator</a><button id = "calc">?</button></li>
+    <li><a id = 'ca' href= "https://abasiccalculator.herokuapp.com/" target="_blank" rel="noopener noreferrer"> Calculator</a><button id = "calc">?</button></li>
     <script type="text/javascript">
         document.getElementById("tt").onclick = function () {
-            alert('Project completed but.. Reworking code and visual design\n Please check link soon for the completed project!')
-        };
-        document.getElementById("ca").onclick = function () {
             alert('Project completed but.. Reworking code and visual design\n Please check link soon for the completed project!')
         };
         document.getElementById("rl").onclick = function () {
