--- a/my_portfolio/main_app/templates/link_page/links.html
+++ b/my_portfolio/main_app/templates/link_page/links.html
@@ -6,19 +6,13 @@
     <ul class = 'linkz'>
     <li><a id = 'gh' href= "https://github.com/Y2Kuwu" target="_blank" rel="noopener noreferrer"> GitHub</a></li>
     <li><a id = 're' href = "{% static 'resume.pdf' %}" target="_blank" rel="noopener noreferrer"> Resume</a></li>
-    <li><a id = 'tt' href= "https://github.com/Y2Kuwu/tic-tac-toe" target="_blank" rel="noopener noreferrer"> Tic-Tac-Toe</a><button id = "tic">?</button></li>
+    <li><a id = 'tt' href= "https://ticattacktoe.herokuapp.com/" target="_blank" rel="noopener noreferrer"> Tic-Tac-Toe</a><button id = "tic">?</button></li>
     <li><a id = 'sm' href= "https://coinconsumer.netlify.app/" target="_blank" rel="noopener noreferrer"> Slot Machine</a><button id = "slot">?</button></li>
-    <li><a id = 'rl' href= "https://github.com/Y2Kuwu" target="_blank" rel="noopener noreferrer"> RadLibs</a></li>
+    <!-- <li><a id = 'rl' href= "https://github.com/Y2Kuwu" target="_blank" rel="noopener noreferrer"> RadLibs</a></li> -->
     <li><a id = 'pm' href= "https://perfectmatchskills.herokuapp.com/" target="_blank" rel="noopener noreferrer"> Perfect.match()</a></li>
     <li><a id = 'fb' href= "https://project-004.herokuapp.com/" target="_blank" rel="noopener noreferrer"> FateBook</a></li>
     <li><a id = 'ca' href= "https://abasiccalculator.herokuapp.com/" target="_blank" rel="noopener noreferrer"> Calculator</a><button id = "calc">?</button></li>
     <script type="text/javascript">
-        document.getElementById("tt").onclick = function () {
-            alert('Project completed but.. Reworking code and visual design\n Please check link soon for the completed project!')
-        };
-        document.getElementById("rl").onclick = function () {
-            alert('Project completed but.. Reworking code and visual design\n Please check link soon for the completed project!')
-        };
     </script>
     <li><a id = 're' href= "https://flexboxcss-grid-lab.jamesfox12.repl.co/" target="_blank" rel="noopener noreferrer"> Willem Dafoe</a><button id = "will">?</button></li>
     </ul>
