--- a/my_portfolio/main_app/templates/contact/create_contact.html
+++ b/my_portfolio/main_app/templates/contact/create_contact.html
@@ -7,11 +7,15 @@
     <div class = 'take_info'>Seek me out</div> 
 </div>
 
-<ul class ='my_info'>
-<a class ='email'>Email:<span class ='em'>jamesmfox5@gmail.com</span></a>
-<a class = "iEmail">jamesmfox5@gmail.com<a>
-<a id = 'l' href = "https://www.linkedin.com/in/james-fox-b372b558/"target="_blank" rel="noopener noreferrer">LinkedIn</a>
-</ul>
+<div class="contact">
+<a class ='email'>Email&emsp;&emsp;&emsp;&emsp;➭</a>
+  <span class = "iEmail">jamesmfox5@gmail.com</span>
+<a class ='linkedI'>LinkedIn&emsp;&emsp;&nbsp;➭</a>
+<a class = 'l' href = "https://www.linkedin.com/in/james-fox-v/"target="_blank" rel="noopener noreferrer">[here]</a>
+  
+</div>
+
+
 <div class = 'con_form'>
   <form id = 'con' method="POST" action="{% url 'create_contact' %}" >
     {% csrf_token %}
