--- a/my_portfolio/main_app/templates/home.html
+++ b/my_portfolio/main_app/templates/home.html
@@ -9,12 +9,12 @@
     <h1 class = "welcome">Glad you could make it!</h1> 
     <div class = "abtme">
        
-        <p class = 'about'>My name is James Fox, I am a Fullstack Software Engineer with a mindset geared towards functionality, presentability, and efficiency.<br>
-           I have experience creating and designing pages just like this one from front to backend.
-           Technology and design in whatever form that may present itself has always been a passion of mine. To have the experience to make it a career is truly fufilling.<br><br>
-           As a Fullstack Engineer the final product is not always worth sprinting towards, without proper intent, direction, and organziation.
+        <p class = 'about'>My name is James Fox, I am a Fullstack Software Engineer with a mindset geared towards functionality, presentability, and efficiency.
+           I have experience creating and designing pages and apps just like this one from front to backend.
+           Technology and design has always been a passion of mine and to make it a real career has been truly rewarding.<br><br>
+           As a Fullstack Engineer I've come to understand the objective is not always worth sprinting towards, without proper intent, direction, and organziation.
            With that, I've found that working meticulously, with purpose, and with a solid foundation has become the best approach.
-           The reward of seeing all the pieces come together and properly execute can be extremely rewarding. In nearly all cases it's worth the effort we put in from start to finish.
+           The joy of seeing all the pieces come together and execute as intended makes all of the hard work worthwhile.<br><br>
            With this being such a diverse field I find communication to be one of our best tools for bringing together a truly remarkable project.
            That being said I have a background that has required me to follow that truth and the technical skills have followed as a result.</p>
       
