--- a/my_portfolio/main_app/templates/home.html
+++ b/my_portfolio/main_app/templates/home.html
@@ -9,17 +9,16 @@
     <h1 class = "welcome">Glad you could make it!</h1> 
     <div class = "abtme">
        
-        <p class = 'about'>My name is James Fox, I am a Fullstack Software Engineer with a mindset geared towards functionality, presentability, and efficiency.
-           I have experience creating and designing pages and apps just like this one from front to backend.
-           Technology and design has always been a passion of mine and to make it a real career has been truly rewarding.<br><br>
-           As a Fullstack Engineer I've come to understand the objective is not always worth sprinting towards, without proper intent, direction, and organziation.
-           With that, I've found that working meticulously, with purpose, and with a solid foundation has become the best approach.
-           The joy of seeing all the pieces come together and execute as intended makes all of the hard work worthwhile.<br><br>
-           With this being such a diverse field I find communication to be one of our best tools for bringing together a truly remarkable project.
-           That being said I have a background that has required me to follow that truth and the technical skills have followed as a result.</p>
-      
-        <p class = 'about'>Take a look around the site and tell me what you think!</p>
-        <p class = 'about'>I look forward to hearing from you and thank you for stopping by.</p>
+        <p>My name is James Fox, I am a Fullstack Software Engineer with a mindset geared towards functionality, presentability, and efficiency.
+            I have experience creating and designing pages like the one you're viewing now. I've worked both independently and as a team to create some promising applications, and always looking to the next chance to improve my skills.
+            Technology and design has always been something I've been drawn to.. To make it a career is truly a gift.
+            I've found as a Fullstack Engineer the final product is not always worth sprinting towards without a plan or proper intent.<br></br>
+            Working meticulously, with a purpose, and with a solid foundation seems to bring greater returns. In nearly all cases it's worth the effort we put in from start to finish.
+            With this being such a diverse field I find communication to be one of our best tools for bringing together a truly remarkable project and uniting a team.
+            That being said I have a background that has required me to follow that truth and the technical skills have followed as a result.</p>
+       
+         <p>Take a look around the site and tell me what you think!</p>
+         <p>And thank you for stopping by.</p>
         
     </div>
 
