--- a/my_portfolio/main_app/templates/link_page/links.html
+++ b/my_portfolio/main_app/templates/link_page/links.html
@@ -7,20 +7,78 @@
     <li><a id = 'gh' href= "https://github.com/Y2Kuwu" target="_blank" rel="noopener noreferrer"> GitHub</a></li>
     <li><a id = 're' href = "{% static 'resume.pdf' %}" target="_blank" rel="noopener noreferrer"> Resume</a></li>
     <li><a id = 'tt' href= "https://ticattacktoe.herokuapp.com/" target="_blank" rel="noopener noreferrer"> Tic-Tac-Toe</a></li>
+    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#drp1" aria-expanded="false" aria-controls="drp1">
+        What is this?
+      </button>
+    </p>
+    <div class="collapse" id="drp1">
+      <div class="card card-body">
+          Classic tic-tac-toe. <br>
+      <p></br><span class = "y">YOU</span> vs. <span class = "m">THE MACHINE</span>.<br></p>
+    </br><p>Designed to choose by random with accurate scoring. So don't blame me if the CPU brings it's <span class = "aGame">(A)</span> game.</p>
+
+      </div>
+    </div>
     <li><a id = 'sm' href= "https://coinconsumer.netlify.app/" target="_blank" rel="noopener noreferrer"> Slot Machine</a></li>
+    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#drp2" aria-expanded="false" aria-controls="drp2">
+        Um?
+      </button>
+    </p>
+    <div class="collapse" id="drp2">
+      <div class="card card-body">
+         <p> A match 3 slot machine. Microtransactions not included. </p>
+         <p> All assets are drawn and designed by myself. </p>
+         <p> <span class = "warn">WARNING:</span> sound effects on each play. </p>
+         <p><span class = note> NOTES: </span></p>
+         <p> -Click the handle to test your luck. </p>
+         <p> -Click the <span class = "x">X</span> button to exit. </p>
+         <p> -Click the <span class = "dollar">$</span> button to avoid losing a point upon loss. </p>
+      </div>
+    </div>
     <!-- <li><a id = 'rl' href= "https://github.com/Y2Kuwu" target="_blank" rel="noopener noreferrer"> RadLibs</a></li> -->
     <li><a id = 'pm' href= "https://perfectmatchskills.herokuapp.com/" target="_blank" rel="noopener noreferrer"> Perfect.match()</a></li>
+    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#drp3" aria-expanded="false" aria-controls="drp3">
+        What is that?
+      </button>
+    </p>
+    <div class="collapse" id="drp3">
+      <div class="card card-body">
+          <p>A site for finding developer jobs tailored to your personal skills. A group effort to design a fully functional site using current data from an API.</p>
+          <p>Allows creation of account, a small profile section, search capabilities, and of course.. <span class = "heart">❤️❤️</span><span class = "matchMe"> A perfect matching system. </span> <span class = "heart">❤️❤️</span></p>
+      </div>
+    </div>
     <li><a id = 'fb' href= "https://project-004.herokuapp.com/" target="_blank" rel="noopener noreferrer"> FateBook</a></li>
+    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#drp4" aria-expanded="false" aria-controls="drp4">
+        Huh?
+      </button>
+    </p>
+    <div class="collapse" id="drp4">
+      <div class="card card-body">
+          <p>My first MERN stack project. Made for buisness owners, CEOs, coworkers, and the people in between.</p>
+          <p></p>
+      </div>
+    </div>
     <li><a id = 'ca' href= "https://abasiccalculator.herokuapp.com/" target="_blank" rel="noopener noreferrer"> Calculator</a></li>
     
     <li><a id = 're' href= "https://flexboxcss-grid-lab.jamesfox12.repl.co/" target="_blank" rel="noopener noreferrer"> Willem Dafoe</a></li>
+    <p>
+        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#drp5" aria-expanded="false" aria-controls="drp5">
+          Huh?
+        </button>
+      </p>
+      <div class="collapse" id="drp5">
+        <div class="card card-body">
+            An example of the infamous actors calling card.
+        </div>
+      </div>
+   
     <!-- <button id = "will">?</button>
     <button id = "calc">?</button>
     <button id = "tic">?</button>
     <button id = "slot">?</button>  -->
     </ul>
     </div>
-
+    
 
 {% endblock %}
 
