--- a/my_portfolio/staticfiles/static/style.css
+++ b/my_portfolio/staticfiles/static/style.css
@@ -72,7 +72,7 @@ main{
 }
 nav{ 
     margin-bottom: -15px;
-    background-color: gray;
+    /* background-color: gray; */
     margin-top: -70px;
     z-index: -1;
 }
@@ -627,6 +627,7 @@ nav:hover{
         color: black;
         text-shadow: gray 2px 2px;
     }
+
 
 /* .email{
     position: relative;
